--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "directories": {
     "test": "test"
   },
+  "type": "module",
   "scripts": {
     "test": "node --test test/**/*.test.js",
     "start": "fastify start -l info app.js",
@@ -23,5 +24,10 @@
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
     "postgrator": "^8.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0"
   }
 }
