add online playing feature

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
   "type": "module",
   "scripts": {
     "test": "node --test test/**/*.test.js",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "start": "fastify start --options -l info app.js",
+    "dev": "fastify start --options -w -l info app.js"
   },
   "keywords": [],
   "author": "",
