validate Google JWT token & redirect to home page

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "node --test test/**/*.test.js",
     "start": "fastify start --options -l info app.js",
-    "dev": "fastify start --options -l info app.js"
+    "dev": "fastify start --options -w --ignore-watch='data.db' -l info app.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
+    "google-auth-library": "^10.1.0",
     "postgrator": "^8.0.0"
   },
   "devDependencies": {
